tag.getSimilar method implemented, but the implementation uses 2 seperate requests to display one result (on search)
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/musicview/trunk@11667 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/tag.getSimilar.html
+++ b/res/tag.getSimilar.html
@@ -1,7 +1,25 @@
-###TEMPLATE###
+###TEMPLATE_SEARCH###
 	<br />
 	<form action="###TMPL_CURRENTPAGE-FORM-ACTION-URL###" method="get" title="###TMPL_TAG_GETSIMILAR-FORM-TITLE###">
-		<input type="text" name="tag.getSimilar-INPUT-TAGNAME" value="###TAG_TAG.REQ_TAG###" size="30" />
-		<input type="submit" name="tag.getSimilar-FORM-SUBMIT" value="###TMPL_TAG_GETSIMILAR-SUBMIT###" />
+		<input class="tag_getSimilar-INPUT-CLASS-value" type="text" name="tx_musicview_pi1[tag.getSimilar-INPUT-TAGNAME]" value="###TAG_TAG.REQ_TAG###" size="30" />
+		<input class="tag_getSimilar-INPUT-CLASS-submit" type="submit" name="tx_musicview_pi1[tag.getSimilar-FORM-SUBMIT]" value="###TMPL_TAG_GETSIMILAR-SUBMIT###" />
 	</form>
+###TEMPLATE_SEARCH###
+
 ###TEMPLATE###
+	<br />
+	<b>###SIMILARTAGS_ATTR_TAG###</b>:
+
+	<table width="400px">
+		<tbody>
+			<!-- ###TEMPLATE_TAG### begin -->
+			<tr class="tag_getSimilar-TR-CLASS-tagurlname">
+				<td class="tag_getSimilar-TD-CLASS-tagurlname">
+					###TAG_URLNAME###
+				</td>
+			</tr>
+			<!-- ###TEMPLATE_TAG### end -->
+		</tbody>
+	</table>
+###TEMPLATE###
+
