implemented artist.getSimilar, artist.getTopAlbums, artist.getTopFans API calls
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/musicview/trunk@11733 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/artist.getInfo.html
+++ b/res/artist.getInfo.html
@@ -32,7 +32,7 @@
 	
 	<!-- ###TEMPLATE_STATS### begin -->
 	<br />
-	<table class="artist_getINFO-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="artist_getInfo-TABLE" cellspacing="0px" cellpadding="2px">
 		<tr>
 			<td width="10%">
 				Listeners:
