- templates with new CSS style (one for all) - some new API calls implemented
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/musicview/trunk@11768 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/album/album.getInfo.html
+++ b/res/album/album.getInfo.html
@@ -1,6 +1,6 @@
 ###TEMPLATE###
-	<table class="album_getINFO-TABLE" cellspacing="0px" cellpadding="2px">
-		<tr class="album_getInfo-TR_CLASS-effect">
+	<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
+		<tr class="tx_musicview_pi1-TR-mouseover-effect">
 			<td width="3%" align="right">
 				###ALBUM_ID###
 			</td>
