--- a/res/artist/artist.getSimilar.html
+++ b/res/artist/artist.getSimilar.html
@@ -2,7 +2,7 @@
 	<br />
 	<b>###SIMILARARTISTS_ATTR_ARTIST###: </b><br /> 
 	<b>Similar artists</b>:
-	<table class="artist_getSimilar-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
 		<!-- ###TEMPLATE_ARTIST### begin -->
 			<tr>
 				<td width="10%">
