--- a/res/artist/artist.getTopFans.html
+++ b/res/artist/artist.getTopFans.html
@@ -1,10 +1,10 @@
 ###TEMPLATE###
 	<b>###TOPFANS_ATTR_ARTIST###</b>:
 
-	<table class="artist_getTopFans-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
 		<tbody>
 			<!-- ###TEMPLATE_USER### begin -->
-			<tr class="artist_getTopFans-TR_CLASS-effect">
+			<tr class="tx_musicview_pi1-TR-mouseover-effect">
 				<td width="5%">
 					###USER_WEIGHT###
 				</td>
