--- a/res/event/event.getInfo.html
+++ b/res/event/event.getInfo.html
@@ -1,27 +1,26 @@
 <!-- ###TEMPLATE### begin -->
-<div class="event_getInfo-DIV">
-	<table class="event_getInfo-TABLE">
+	<table class="tx_musicview_pi1-TABLE-boxed">
 		<tbody>
 			<tr>
 				<td colspan="3">
-					<span class="event_getInfo-SPAN-title">
+					<span class="tx_musicview_pi1-SPAN-title">
 						###EVENT_LINKTITLE###
 					</span>
 					(###EVENT_STARTDATE###)
 				</td>
 			</tr>
 			<tr>
-				<td class="event_getInfo-TD-image" width="10%">
+				<td class="tx_musicview_pi1-TD-image" width="10%">
 					###EVENT_IMAGE###
 				</td>
-				<td class="event_getInfo-TD-artists">
+				<td class="tx_musicview_pi1-TD-valign-top">
 					<!-- ###TEMPLATE_ARTISTS### begin -->
 						<b>###TMPL_EVENT_MARKER_HEADLINER###</b> <br />
-						<span class="event_getInfo-SPAN-headliner">
+						<span class="tx_musicview_pi1-SPAN-italic-title">
 							###ARTISTS_HEADLINER###
 						</span>
 						<br />
-						<div class="event_getInfo-DIV-line" /></div>
+						<div class="tx_musicview_pi1-DIV-line" /></div>
 						<b>###TMPL_EVENT_MARKER_ARTISTS###</b> <br />
 						<!-- ###TEMPLATE_ARTIST### begin -->
 							###ARTIST_CONTENT### <br />
@@ -30,7 +29,7 @@
 				</td>
 				<td width="150px">
 					<!-- ###TEMPLATE_VENUE### begin -->
-						<div class="event_getInfo-DIV-venue">
+						<div class="tx_musicview_pi1-DIV-table-box">
 							<h2>
 								###VENUE_URLNAME###
 							</h2>
@@ -51,6 +50,5 @@
 			</tr>
 		</tbody>
 	</table>
-</div>
 <!-- ###TEMPLATE### end -->
 
