--- a/res/geo/geo.getTopArtists.html
+++ b/res/geo/geo.getTopArtists.html
@@ -1,8 +1,8 @@
 ###TEMPLATE###
 	###TOPARTISTS_ATTR_COUNTRY###
-	<table class="geo_getTopArtists-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
 		<!-- ###TEMPLATE_ARTIST### begin -->
-			<tr class="geo_getTopArtists-TR_CLASS-effect">
+			<tr class="tx_musicview_pi1-TR-mouseover-effect">
 				<td width="3%" align="right">
 					###ARTIST_ATTR_RANK###
 				</td>
