--- a/res/track/track.getInfo.html
+++ b/res/track/track.getInfo.html
@@ -1,5 +1,5 @@
 ###TEMPLATE###
-	<table class="track_getInfo-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
 		<tr>
 			<td width="5%">
 				<!-- ###TEMPLATE_ALBUM### begin -->
