--- a/res/artist/artist.getInfo.html
+++ b/res/artist/artist.getInfo.html
@@ -1,6 +1,6 @@
 ###TEMPLATE###
 	<br />
-	<table class="artist_getINFO-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
 		<tbody>
 			<tr>
 				<td colspan="2">
@@ -35,7 +35,7 @@
 	
 	<!-- ###TEMPLATE_STATS### begin -->
 	<br />
-	<table class="artist_getInfo-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
 		<tbody>
 			<tr>
 				<td width="10%">
@@ -58,7 +58,7 @@
 	<!-- ###TEMPLATE_SIMILAR### begin -->
 		<br />
 		<b>Similar artists</b>:
-		<table class="artist_getINFO-TABLE" cellspacing="0px" cellpadding="2px">
+		<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
 			<!-- ###TEMPLATE_ARTIST### begin -->
 				<tr>
 					<td width="10%">
