--- a/res/track/track.getSimilar.html
+++ b/res/track/track.getSimilar.html
@@ -1,12 +1,11 @@
 ###TEMPLATE###
 	<br />
-	<div id="tag.getSimilar-result">
+	<div>
 		<b>###SIMILARTRACKS_ATTR_ARTIST### - ###SIMILARTRACKS_ATTR_TRACK###</b>:
-	
-		<table class="track_getSimilar-TABLE" cellspacing="0px" cellpadding="2px">
+		<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
 			<tbody>
 				<!-- ###TEMPLATE_TRACK### begin -->
-				<tr class="track_getSimilar-TR_CLASS-effect">
+				<tr class="tx_musicview_pi1-TR-mouseover-effect">
 					<td width="5%">
 						###TRACK_MATCH###
 					</td>
