--- a/res/track/track.getTopFans.html
+++ b/res/track/track.getTopFans.html
@@ -1,10 +1,9 @@
 ###TEMPLATE###
 	<b>###TOPFANS_ATTR_ARTIST### - ###TOPFANS_ATTR_TRACK###</b>:
-
-	<table class="track_getTopFans-TABLE" cellspacing="0px" cellpadding="2px">
+	<table class="tx_musicview_pi1-TABLE-detail" cellspacing="0px" cellpadding="2px">
 		<tbody>
 			<!-- ###TEMPLATE_USER### begin -->
-			<tr class="track_getTopFans-TR_CLASS-effect">
+			<tr class="tx_musicview_pi1-TR-mouseover-effect">
 				<td width="5%">
 					###USER_WEIGHT###
 				</td>
