+ removed unused code/translations
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/musicview/trunk@12379 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/group/group.getWeeklyChartList.html
+++ b/res/group/group.getWeeklyChartList.html
@@ -2,7 +2,7 @@
 	
 	<!-- ###TEMPLATE_WEEKLYCHARTLIST### begin -->
 
-	<form action="###TEMPLATE_WEEKLYCHARTLIST-FORM-ACTION-URL###" method="get" title="###TEMPLATE_WEEKLYCHARTLIST-FORM-TITLE###">
+	<form action="###TMPL_WEEKLYCHARTLIST-FORM-ACTION-URL###" method="get">
 		<table class="tx_musicview_pi1-TABLE-boxed">
 			<tbody>
 				<tr>
