--- a/res/user/user.getWeeklyChartList.html
+++ b/res/user/user.getWeeklyChartList.html
@@ -2,7 +2,7 @@
 	
 	<!-- ###TEMPLATE_WEEKLYCHARTLIST### begin -->
 
-	<form action="###TEMPLATE_WEEKLYCHARTLIST-FORM-ACTION-URL###" method="get" title="###TEMPLATE_WEEKLYCHARTLIST-FORM-TITLE###">
+	<form action="###TMPL_WEEKLYCHARTLIST-FORM-ACTION-URL###" method="get">
 		<table class="tx_musicview_pi1-TABLE-boxed">
 			<tbody>
 				<tr>
