+ closed Bug #1591 + changed implementation of the image selection (now displays default images)
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/musicview/trunk@12577 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/artist/artist.search.html
+++ b/res/artist/artist.search.html
@@ -9,7 +9,7 @@
 			<tr class="tx_musicview_pi1-TR-mouseover-effect">
 				<td width="25%">
 					<!-- ###TEMPLATE_IMAGE### start -->
-					<img src="###IMAGE_CONTENT###" />
+						###IMAGE_CONTENT###
 					<!-- ###TEMPLATE_IMAGE### end -->
 				</td>
 				<td>
